--- a/public/parts/alarms.html
+++ b/public/parts/alarms.html
@@ -69,6 +69,7 @@
 	PLUGIN('alarms', function(exports) {
 
 		exports.reload = function() {
+			EXEC('common/hidemenu');
 			exports.refresh();
 		};
 
