--- a/public/forms/app.html
+++ b/public/forms/app.html
@@ -4,20 +4,21 @@
 			<div class="alert"><i class="fa fa-info-circle"></i>@(SuperAdmin predefined URL address which you can use for your app). <i class="fa fa-warning"></i>@(<b>Uploading of source-code</b> is possible after creation process)</div>
 		</div>
 		<div class="padding">
-			<div data---="input__?.url__placeholder:https\://www.totaljs.com;required:true;type:url__'https://'" data-bind="?.id__disabled__delay:100">@(URL address)</div>
-			<div class="help m">
-				@(The URL address must contain protocol <code>http</code> or <code>https</code>).<br />
-				<b>@(If you want to use your own domain then make sure that DNS A records for this domain are targeted to Total.js Cloud server</b>.)
+			<div data---="input__?.url__placeholder:https\://www.totaljs.com;required:true;type:url__'https://'" data-bind="?.id__disabled">@(URL address)</div>
+			<div class="help" data-bind="?.id__hide">
+				@(The URL address must contain protocol <code>https</code>)<br />
+				<span class="link b exec" data-exec="?/dns">@(How to use own domain?)</span>
 			</div>
+			<br />
 			<div data---="input__?.category__dirsource:apps.categories;dircustom:true;dirempty:@(Without category);placeholder:@(Choose a category);dirplaceholder:@(Search or create new)" class="m">@(Category)</div>
 			<div data--="checkbox__?.debug__null__true" class="inline b mr5 black">@(Enable debug mode)</div>
 			<div class="inline middle mr15"><span class="badge badge-red">@(debug)</span></div>
 			<div data--="checkbox__?.watcher__disabled:true__false" class="inline mr15" data-bind="?.debug__disabled">@(Enable watcher)</div>
 			<div data--="checkbox__?.highpriority" class="inline mr15 black">@(High priority)</div>
-			<div data--="checkbox__?.accesslog" class="inline mr15">@(Enable access logging)</div>
 			<div data--="checkbox__?.backup" class="inline">@(Enable backing up)</div>
 		</div>
 		<hr class="nmb nmt" />
+		<!--
 		<div data-bind="?.url__show:value&&value.substring(0,8)==='https://'" class="hidden">
 			<div class="bg-smoke m">
 				<div class="padding">
@@ -42,31 +43,29 @@
 					</script>
 				</div>
 			</div>
-		</div>
+		</div>-->
 		<div class="padding npb">
 
 			<div class="alert m hidden" data-bind="?.cluster__show:value==='auto'||(value&&(+value)>1)"><i class="fas fa-exclamation-circle"></i><b>@(IMPORTANT:)</b><br />@(You have enabled <b>Cluster mode</b> and the application must be optimized for the cluster mode. Applications in cluster mode are multi-threaded).</div>
 
 			<div class="row">
-				<div class="col-md-3 m">
-					<div data---="input__?.cluster__maxlength:4;dirsource:%cluster;dirplaceholder:@(Choose or type count of threads);dircustom:1;dirminwidth:300__''"><b>@(Cluster)</b></div>
+				<div class="col-md-3 col-xs-6 m">
+					<div data---="input__?.cluster__maxlength:4;dirsource:%cluster;dirplaceholder:@(Choose or type count of threads);dircustom:1;dirminwidth:300__''">@(Cluster)</div>
 				</div>
-				<div class="col-md-3 m">
+				<div class="col-md-3 col-xs-6 m">
 					<div data---="input__?.ddos__align:center;increment:true;maxlength:4;type:number__50">@(DDOS protection)</div>
 				</div>
-				<div class="col-md-3 m">
+				<div class="col-md-3 col-xs-6 m">
 					<div data---="input__?.memory__align:center;increment:true;maxlength:4;placeholder:@(auto);type:number__'auto'">@(Memory limit)</div>
 				</div>
-				<div class="col-md-3 m">
+				<div class="col-md-3 col-xs-6 m">
 					<div data---="input__?.priority__align:center;increment:true;maxlength:3;type:number__0">@(Process priority)</div>
 				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-3 m">
+				<div class="col-md-3 col-xs-6 m">
 					<div data---="input__?.size__align:center;icon:cloud-upload;increment:true;maxlength:5;placeholder:e.g. 5;type:number__20">@(Max. upload size)</div>
 					<div class="help">@(Must be defined in megabytes)</div>
 				</div>
-				<div class="col-md-3 m">
+				<div class="col-md-3 col-xs-6 m">
 					<div data---="input__?.proxytimeout__align:center;icon:sign-out;increment:true;maxlength:5;placeholder:@(e.g. 600);type:number__600">@(Max. request timeout)</div>
 					<div class="help">@(Must be defined in seconds)</div>
 				</div>
@@ -87,7 +86,7 @@
 			<div class="clearfix m">&nbsp;</div>
 			<div data-bind="?.version__show:!value" class="hidden">
 				<div data---="input__?.startscript__icon:hourglass-start;maxlength:50;placeholder:index.js">@(Custom start script)</div>
-				<div class="help m">@(We don't recommend to use a custom start script. First argument is <code>port number</code> and second <code>--mode</code> (release or debug))</div>
+				<div class="help m">@(We don't recommend to use a custom start script. Script must be part of root application directory. First argument will be <code>port number</code> and second <code>--mode</code> (release or debug))</div>
 			</div>
 			<div data-bind="?.version__show:value==='total4'" class="hidden">
 				<div data-bind="common.unixsocket__show" class="hidden">
@@ -100,12 +99,15 @@
 				<div class="help"><b>@(IMPORTANT)</b>: @(If you enable threads then we recommend to set <b>Cluster</b> to <code>Auto-scaling</code> mode.)</div>
 			</div>
 		</div>
+		<!--
 		<hr />
 		<div class="padding">
-			<div data---="textboxlist__?.redirect__maxlength:50;placeholder:@(e.g. www.totaljs.com and press enter)__[]" class="m">@(Redirects)</div>
+			<div data---="textboxlist__?.redirect__maxlength:50;placeholder:@(e.g. www.yourdomain.com and press enter)__[]" class="m">@(Redirects)</div>
 			<div data---="textboxlist__?.allow__maxlength:50;placeholder:@(e.g. 129.34.33.33 and press enter)__[]" class="m">@(Allowed IP addresses)</div>
 			<div data---="textboxlist__?.disallow__maxlength:50;placeholder:@(e.g. 129.34.33.33 and press enter)__[]" class="m">@(Blocked IP addresses)</div>
 		</div>
+		-->
+		<br />
 	</div>
 	<nav data---="validation__?">
 		<button name="submit"><i class="fas fa-check-circle"></i>@(SUBMIT)</button>
@@ -123,11 +125,12 @@
 		exports.reload = function(com) {
 			var model = GET('?');
 			com.reconfigure({ title: model.id ? '@(Edit application)' : '@(Create application)' });
+			if (!model.id)
+				setTimeout(exports.dns, 1000);
 		};
 
-		exports.generate = function() {
-			var model = GET('?');
-			SET('?.url', common.domain.replace('@', GUID(4) + '-'));
+		exports.dns = function() {
+			SET('common.form2', 'introdns');
 		};
 
 		exports.submit = function(hide) {
