--- a/public/forms/summary.html
+++ b/public/forms/summary.html
@@ -1,4 +1,4 @@
-<div data---="form__common.form__if:summary;title:@(Trending);width:1024;reload:?/reload;icon:fas fa-chart-line;closeesc:1;closeoutside:1" class="hidden" data-scope="summaryform">
+<div data---="largeform__common.form__if:summary;title:@(Trending);width:1024;reload:?/reload;icon:fas fa-chart-line;closeesc:1;closeoutside:1" class="hidden" data-scope="summaryform">
 	<div class="padding npb" data-bind="?__template">
 		<script type="text/html">
 			{{ if value && value.is }}
@@ -99,7 +99,26 @@
 						</tbody>
 					</table>
 				</div>
+				<div class="col-md-6 m">
+					<h2><i class="fa fa-bug"></i>@(Analyzator)</h2>
+					<table class="table table-bordered table-small">
+						<tbody>
+							{{ foreach m in value.errors }}
+							<tr>
+								{{ if m.empty }}
+									<td class="col-xs-9">&nbsp;</td>
+									<td class="col-xs-3 right active">&nbsp;</td>
+								{{ else }}
+									<td class="col-xs-9"><span class="badge {{ $index | summarycolor }} mr5">{{ $index | indexer }}</span><a href="{{ m.url }}" class="gray" target="_blank">{{ m.url }}</a></td>
+									<td class="col-xs-3 right b red active">{{ m.value }}</td>
+								{{ fi }}
+							</tr>
+							{{ end }}
+						</tbody>
+					</table>
+				</div>
 			</div>
+		</div>
 		{{ fi }}
 		</script>
 	</div>
@@ -121,6 +140,7 @@
 			output.hdd = applications_summary_find(take, 2, true);
 			output.openfiles = applications_summary_find(take, 3, true);
 			output.connections = applications_summary_find(take, 4, true);
+			output.errors = applications_summary_find(take, 5, true);
 			SET('?', output);
 		};
 
@@ -186,6 +206,15 @@
 						continue;
 					obj.sorting = item.connections;
 					obj.value = item.connections;
+					break;
+
+				case 5: // connections
+
+					if (item.analyzatoroutput == null)
+						continue;
+
+					obj.sorting = item.analyzatoroutput === 'error' ? 2 : 1;
+					obj.value = item.analyzatoroutput;
 					break;
 			}
 
