--- a/public/forms/intro-dns.html
+++ b/public/forms/intro-dns.html
@@ -12,7 +12,7 @@
 	<figure>
 		<div><i class="fa fa-5x fa-grin-tongue-wink" style="color:#EC8632"></i></div>
 		<div class="padding" style="max-width:320px;margin:0 auto">
-			<div>@(We are happy that you want to register a new application to your container).</div>
+			<div>@(We are happy that you want to register a new application for your container).</div>
 		</div>
 	</figure>
 
@@ -29,7 +29,7 @@
 	<figure>
 		<div><i class="fa fa-5x fa-globe red"></i></div>
 		<div class="padding">
-			<div>@(Do you want to use your own domain? If yes, then first you need to set <b>DNS - TXT record</b> for your domain and after that you can add application:)</div>
+			<div>@(Do you want to use your domain? If yes, then first you need to set <b>DNS - TXT record</b> for your domain, and after that, you can add application:)</div>
 		</div>
 		<div class="introdns">
 			<p>@(TXT record for your domain):</p>
