--- a/public/forms/upload.html
+++ b/public/forms/upload.html
@@ -18,7 +18,7 @@
 			<div class="inline middle"><span class="badge badge-blue">package.json</span></div>
 		</div>
 		<div data---="checkbox__?.backup">@(Creates a backup)</div>
-		<div data---="checkbox__?.remove__null__true" class="b red">@(Removes all files in the root of application)</div>
+		<div data---="checkbox__?.remove__null__true" class="b red">@(Removes all files in the root of the application)</div>
 	</div>
 
 	<nav data---="validation__?">
