--- a/public/forms/intro-dns.html
+++ b/public/forms/intro-dns.html
@@ -33,7 +33,7 @@
 		</div>
 		<div class="introdns">
 			<p>@(TXT record for your domain):</p>
-			<div><b>@(Domain)</b>: <code>_totalcloud.YOURDOMAIN.com</code></div>
+			<div><b>@(Domain)</b>: <code><b>_totalcloud</b>.YOURDOMAIN.com</code></div>
 			<div><b>@(Value)</b>: <code data-bind="common.dnstoken__text"></code></div>
 			<div><b>TTL</b>: <code>600</code> seconds</div>
 		</div>
