--- a/public/forms/intro-dns.html
+++ b/public/forms/intro-dns.html
@@ -36,6 +36,7 @@
 			<div><b>@(Domain)</b>: <code><b>_totalcloud</b>.YOURDOMAIN.com</code></div>
 			<div><b>@(Value)</b>: <code data-bind="common.dnstoken__text"></code></div>
 			<div><b>TTL</b>: <code>600</code> seconds</div>
+			<div><b>@(Target IP)</b>: <code data-bind="common.dnsip__text"></code></div>
 		</div>
 	</figure>
 </div>
