Fixed data argument

--- a/public/forms/app.html
+++ b/public/forms/app.html
@@ -10,7 +10,7 @@
 				<span class="link b exec" data-exec="?/dns">@(How to use own domain?)</span>
 			</div>
 			<br />
-			<div data---="input__?.name__placeholder:e.g. CMS" class="m">@(Internal name)</div>
+			<div data---="input__?.name__placeholder:@(e.g. CMS)" class="m">@(Internal name)</div>
 			<div data---="input__?.category__dirsource:apps.categories;dircustom:true;dirempty:@(Without category);placeholder:@(Choose a category);dirplaceholder:@(Search or create new)" class="m">@(Category)</div>
 			<div data---="checkbox__?.debug__null__true" class="inline b mr5 black">@(Enable debug mode)</div>
 			<div class="inline middle mr15"><span class="badge badge-red">@(debug)</span></div>
