--- a/public/forms/app.html
+++ b/public/forms/app.html
@@ -4,7 +4,7 @@
 			<div class="alert"><i class="fa fa-info-circle"></i>@(SuperAdmin predefined URL address, which you can use for your app). <i class="fa fa-warning"></i>@(<b>Uploading of source-code</b> is possible after the creation process)</div>
 		</div>
 		<div class="padding">
-			<div data---="input__?.url__placeholder:https\://www.totaljs.com;required:true;type:url__'https://'" data-bind="?.id__disabled">@(URL address)</div>
+			<div data---="input__?.url__monospace:1;placeholder:https\://www.totaljs.com;required:true;type:url__'https://'" data-bind="?.id__disabled">@(URL address)</div>
 			<div class="help" data-bind="?.id__hide">
 				@(The URL address must contain protocol <code>https</code>)<br />
 				<span class="link b exec" data-exec="?/dns">@(How to use own domain?)</span>
@@ -12,11 +12,11 @@
 			<br />
 			<div data---="input__?.name__placeholder:@(e.g. CMS)" class="m">@(Internal name)</div>
 			<div data---="input__?.category__dirsource:apps.categories;dircustom:true;dirempty:@(Without category);placeholder:@(Choose a category);dirplaceholder:@(Search or create new)" class="m">@(Category)</div>
-			<div data---="checkbox__?.debug__null__true" class="inline b mr5 black">@(Enable debug mode)</div>
+			<div data---="input__?.debug__type:checkbox__true" class="inline b mr5 black">@(Enable debug mode)</div>
 			<div class="inline middle mr15"><span class="badge badge-red">@(debug)</span></div>
-			<div data---="checkbox__?.watcher__disabled:true__false" class="inline mr15" data-bind="?.debug__disabled">@(Enable watcher)</div>
-			<div data---="checkbox__?.highpriority" class="inline mr15 black">@(High priority)</div>
-			<div data---="checkbox__?.backup" class="inline">@(Enable backing up)</div>
+			<div data---="input__?.watcher__type:checkbox;disabled:true__false" class="inline mr15" data-bind="?.debug__disabled">@(Enable watcher)</div>
+			<div data---="input__?.highpriority__type:checkbox" class="inline mr15 black">@(High priority)</div>
+			<div data---="input__?.backup__type:checkbox" class="inline">@(Enable backing up)</div>
 		</div>
 		<hr class="nmb nmt" />
 		<!--
@@ -93,7 +93,7 @@
 				<div data-bind="common.unixsocket__show" class="hidden">
 					<hr />
 					<div class="help">@(SuperAdmin will use <b>Unix socket</b> instead of classic network routing. It's faster and more secure.)</div>
-					<div data---="checkbox__?.unixsocket" class="black mt5 b">@(Use Unix socket)</div>
+					<div data---="input__?.unixsocket__type:checkbox" class="black mt5 b">@(Use Unix socket)</div>
 				</div>
 				<hr />
 				<div data---="input__?.threads__dirsource:%threads;dircustom:1;dirplaceholder:@(Type a relative /endpoint/ or enable threads)__''">@(Total.js threads)</div>
